# lostfits

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Caddyfile.dev  Caddyfile.prod  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini
.devcontainer/: devcontainer.json
.github/workflows/: backend.yml  frontend.yml
frontend/: README.md
frontend/vue-app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/vue-app/src/: App.vue  main.ts  router.ts
frontend/vue-app/src/components/: ToastContainer.vue
frontend/vue-app/src/composables/: useToast.ts
infra/: README.md  main.tf  provider.tf  variables.tf
services/api/: .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: README  env.py
services/api/alembic/versions/: 61972fc91991_initial_schema_with_killmail_raw_fit_.py  aa715a4f50e9_add_universe_tables_for_regions_.py
services/api/app/: config.py  db.py  main.py  scheduler.py
services/api/app/clients/: esi.py  zkillboard.py
services/api/app/models/: __init__.py  constellation.py  fit.py  fit_aggregate_daily.py  item_type.py  killmail_raw.py  region.py  solar_system.py
services/api/app/routes/: admin.py  example.py  fits.py  health.py  killmails.py
services/api/app/tasks/: aggregate.py  ingest.py  universe.py
services/api/app/utils/: cache.py  fit_parser.py
services/api/tests/: manual.http
services/web/: .env.example  package-lock.json  package.json
services/web/src/: App.vue
(+8 files in other folders)
