[project]
name = "lostfits-api"
version = "0.1.0"
description = "LostFits backend (FastAPI + SQLAlchemy + RQ + APScheduler)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "redis>=5.0.7",
  "rq>=1.16.2",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "tenacity>=8.4.2",
  "orjson>=3.10.0",
  "alembic>=1.13.2",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2"
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.8",
  "black>=24.8.0",
  "mypy>=1.11.1",
  "types-redis>=4.6.0.20241004",
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
